Bug 1152662: user story text should wrap

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -256,6 +256,7 @@ input[type="number"] {
 
 #user-story {
     margin: 0;
+    white-space: pre-wrap;
 }
 
 #user-story-actions {
